projeto lampada finalizado

--- a/8_desafioLampada/index.html
+++ b/8_desafioLampada/index.html
@@ -14,9 +14,10 @@
         <h1> Lâmpada DNC</h1>
     </header>
     <section>
-        <img src="desligada.svg" id="lampada" onclick="Quebrar()"> <br>
+        <img src="desligada.svg" id="lampada"> <br>
         <input type="button" value="Ligar" class="botao" id="liga" onclick="Ligar()">
-        <input type="button" value="Desligar" class="botao" id="desliga" onclick="Desligar()">
+        <input type="button" value="Desligar" class="botao" id="desliga" onclick="Desligar()"> <br>
+        <input type="button" value="Consertar" class="botao" id="conserta" onclick="Consertar()">
     </section>
 <script src="lampada.js"></script>
 </body>
